--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,10 +7,11 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.15.x'
+          stable: false
+          go-version: 'go1.16beta1'
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Install go1.16 beta
-        run: go get golang.org/dl/go1.16beta1 && go1.16beta1 download
+      - name: Print go version
+        run: go version
       - name: Test
         run: make test
