--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           stable: false
-          go-version: 'go1.16beta1'
+          go-version: '1.16beta1'
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Print go version
